admin issuance and management of api keys in db mode
